--- a/Shortcut/Base.lproj/Main.storyboard
+++ b/Shortcut/Base.lproj/Main.storyboard
@@ -1,24 +1,128 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="duL-7N-klM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Mountain-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="mountainVC" id="BYZ-38-t0r" customClass="MountainsVC" customModule="Shortcut" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Mountains" translatesAutoresizingMaskIntoConstraints="NO" id="nRx-xb-k5b">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="nRx-xb-k5b" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="5bl-bK-ktj"/>
+                            <constraint firstItem="nRx-xb-k5b" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="6yf-LG-lhx"/>
+                            <constraint firstItem="nRx-xb-k5b" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="OIW-F5-u2U"/>
+                            <constraint firstItem="nRx-xb-k5b" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="e6A-Ez-4rw"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Mountain" image="MountainShort" selectedImage="MountainShort" id="NfK-8X-diz"/>
+                    <navigationItem key="navigationItem" id="5Pr-1n-cru">
+                        <barButtonItem key="rightBarButtonItem" systemItem="play" id="U1s-JI-koz"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1904.8" y="-564.46776611694156"/>
+        </scene>
+        <!--Space-->
+        <scene sceneID="eM1-a6-et3">
+            <objects>
+                <viewController storyboardIdentifier="spaceVC" id="v5j-Df-u9q" customClass="SpaceVC" customModule="Shortcut" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mlq-nT-ios">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Space" translatesAutoresizingMaskIntoConstraints="NO" id="E30-zb-fvP">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="hMS-2C-CDK" firstAttribute="trailing" secondItem="E30-zb-fvP" secondAttribute="trailing" id="GGx-G8-CFc"/>
+                            <constraint firstItem="hMS-2C-CDK" firstAttribute="bottom" secondItem="E30-zb-fvP" secondAttribute="bottom" id="fD1-JU-b3X"/>
+                            <constraint firstItem="E30-zb-fvP" firstAttribute="top" secondItem="hMS-2C-CDK" secondAttribute="top" id="g7c-0I-cNp"/>
+                            <constraint firstItem="E30-zb-fvP" firstAttribute="leading" secondItem="hMS-2C-CDK" secondAttribute="leading" id="msw-Mj-xqa"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="hMS-2C-CDK"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Space" image="SpaceShort" selectedImage="SpaceShort" id="LDM-co-Dvg"/>
+                    <navigationItem key="navigationItem" id="6UI-uo-ypX">
+                        <barButtonItem key="rightBarButtonItem" systemItem="play" id="Ehr-UR-Szh"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c8I-c3-miN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2656.8000000000002" y="-161.46926536731635"/>
+        </scene>
+        <!--Ocean-->
+        <scene sceneID="AH5-ia-kls">
+            <objects>
+                <viewController storyboardIdentifier="oceanVC" id="BZp-C4-L5y" customClass="OceanVC" customModule="Shortcut" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tMi-Y3-ogf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Ocean" translatesAutoresizingMaskIntoConstraints="NO" id="6H1-Xs-TTz">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="LXd-Ky-mIJ" firstAttribute="trailing" secondItem="6H1-Xs-TTz" secondAttribute="trailing" id="4lC-qV-qhv"/>
+                            <constraint firstItem="6H1-Xs-TTz" firstAttribute="leading" secondItem="LXd-Ky-mIJ" secondAttribute="leading" id="8aJ-mS-Jl7"/>
+                            <constraint firstItem="LXd-Ky-mIJ" firstAttribute="bottom" secondItem="6H1-Xs-TTz" secondAttribute="bottom" id="MX3-tx-QNI"/>
+                            <constraint firstItem="6H1-Xs-TTz" firstAttribute="top" secondItem="LXd-Ky-mIJ" secondAttribute="top" id="NIH-NJ-6Io"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="LXd-Ky-mIJ"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Ocean" image="OceanShort" selectedImage="OceanShort" id="pgF-dj-Vhn"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="l8g-pL-Sfy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1904.8" y="158.77061469265368"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="nzY-3R-Cee">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="duL-7N-klM" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gEi-aD-dPK">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="mPD-X2-4Yu"/>
+                        <segue destination="v5j-Df-u9q" kind="relationship" relationship="viewControllers" id="Dyy-K6-lf6"/>
+                        <segue destination="BZp-C4-L5y" kind="relationship" relationship="viewControllers" id="JYV-bJ-cdB"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="z1P-Xp-sJE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="965.60000000000002" y="-202.84857571214394"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="MountainShort" width="35" height="35"/>
+        <image name="Mountains" width="375" height="667"/>
+        <image name="Ocean" width="375" height="667"/>
+        <image name="OceanShort" width="35" height="35"/>
+        <image name="Space" width="375" height="667"/>
+        <image name="SpaceShort" width="35" height="35"/>
+    </resources>
 </document>
